# TextFileComparer

./: CMakeLists.txt  README.md  SConstruct
src/: CMakeLists.txt  Diff.cc  Diff.h  Document.h  FileParser.cc  FileParser.h  Main.cc  Mainwindow.cc  Mainwindow.h  Merger.cc  Merger.h
tests/: CMakeLists.txt  Test_diff.cc  Test_fileparser.cc  Test_merger.cc  test_comparer.cpp
